--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
   <link rel="stylesheet" id="theme-color" type="text/css" href="#"/>
   <!-- favicon links -->
   <link rel="shortcut icon" type="image/png" href="assets/images/header/favicon.ico" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Arimo"/>
 </head>
 <body>
   <app-root></app-root>
