update path component

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
   <link rel="stylesheet" type="text/css" href="assets/js/plugin/rs_slider/navigation.css" />
   <link rel="stylesheet" type="text/css" href="assets/js/plugin/rs_slider/settings.css" />
   <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="assets/css/seat.css" />
   <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
   <link rel="stylesheet" id="theme-color" type="text/css" href="#"/>
   <!-- favicon links -->
