--- a/src/index.html
+++ b/src/index.html
@@ -31,16 +31,17 @@
     <link rel="stylesheet" type="text/css" href="assets/css/seat.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css"/>
     <link rel="stylesheet" id="theme-color" type="text/css" href="#"/>
-    <!-- favicon links -->
     <link rel="shortcut icon" type="image/png" href="assets/images/header/favicon.ico"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+    <script scr="https://www.paypal.com/sdk/js?client-id=AeLlOzx8zkZSOKLS65je4pno-89fUNAPAONmbxWrJZt4s_Qs05sms4Cuowwr8W2TN3YuCR3Gf2gTS006">
+    </script>
 </head>
 <body class="mat-typography">
-<app-root></app-root>
 
+<app-root></app-root>
 <script src="assets/js/jquery_min.js"></script>
 <script src="assets/js/modernizr.js"></script>
 <script src="assets/js/bootstrap.js"></script>
